--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Link to manifest here -->
+    <link rel="manifest" href="manifest.json">
+
     <title>Budget Tracker</title>
 </head>
 
@@ -47,6 +50,7 @@
     <script src="/db.js"></script>
     <script src="/index.js"></script>
     <script>
+        // Script for service worker here
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function () {
                 navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
